# qt3d-viewer

./: CMakeLists.txt  DynamicModel.qml  H3Elephant.qml  ThreeDimensionalScene.qml  main.cpp  main.qml
